<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".EventActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="198dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="198dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6"
        app:srcCompat="@drawable/dot" />

    <View
        android:id="@+id/view9"
        android:layout_width="5dp
"
        android:layout_height="84dp"
        android:layout_gravity="center"
        android:layout_marginStart="203dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="203dp"
        android:layout_marginBottom="45dp"
        android:background="#000"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6" />

    <View
        android:id="@+id/view6"
        android:layout_width="266dp"
        android:layout_height="144dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="25dp"
        android:text="@string/evento3"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="@+id/view6"
        app:layout_constraintStart_toStartOf="@+id/view6" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/evento2"
        android:textColor="#000"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <View
        android:id="@+id/view"
        android:layout_width="319dp"
        android:layout_height="90dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/oval_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="188dp"
        android:layout_height="36dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="33dp"
        android:textColor="#000"
        android:text="@string/seus_eventos"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="42dp"
        android:onClick="backToMain"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="198dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="198dp"
        android:layout_marginBottom="247dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6"
        app:srcCompat="@drawable/dot" />

    <View
        android:id="@+id/view7"
        android:layout_width="5dp"
        android:layout_height="84dp"
        android:layout_gravity="center"
        android:layout_marginStart="203dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="203dp"
        android:layout_marginBottom="163dp"
        android:background="#000"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="185dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="127dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6"
        app:srcCompat="@drawable/dotcircle" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="25dp"
        android:text="@string/evento1"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toTopOf="@+id/view6" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="300dp"
        android:text="@string/inicio_jornada"
        android:textColor="#000"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="147dp"
        android:layout_height="49dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="232dp"
        android:text="@string/banho"
        android:textColor="#000"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="213dp"
        android:text="@string/_30min"
        android:textColor="#000"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="128dp"
        android:layout_height="69dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="98dp"
        android:text="@string/deslocar"
        android:textColor="#000"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="88dp"
        android:text="15min"
        android:textColor="#000"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/view9"
        app:layout_constraintTop_toBottomOf="@+id/view6" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="163dp"
        android:layout_height="51dp"
        android:layout_marginStart="77dp"
        android:text="@string/go"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />


</androidx.constraintlayout.widget.ConstraintLayout>